src/style.css
body {
  font-family: arial, sans-serif;
  background: linear-gradient(to bottom right,
  #EEAAAB,
  #EFA9A9,
  #F4C197,
  #EFC786,
  #F4DFAC
  );
}


h1 {
  color: #878787;
  font-size: 24px;
  font-weight: 100;
  line-height: 28px;
  margin-bottom: 0;
}

.search-bar {
 background: #F4C197;
  padding: 5px;
  border-radius: 5px;
  width: 350px;
  border: 1px solid #dadde1;
  position: fixed;
}

button {
  background-color: #F4DFAC;
   position: fixed;
}

ul {
  margin: 0;
  padding: 0;
}

li {
  list-style: none;
  margin: 0;
  padding: 0;

  color: rgb(135, 135, 135);
  font-size: 16px;
  font-weight: 100;
  line-height: 19px;
}

li:first-letter {
  text-transform: capitalize;
}

.weather-app-wrapper {
  max-width: 600px;
  margin: 30px auto;
}

.weather-app {
  padding: 20px;
  border: 1px solid #dadde1;
  border-radius: 5px;
}

.overview {
  margin-bottom: 20px;
}

.weather-temperature img {
  margin-right: 5px;
  height: 64px;
  width: 64px;
}

.weather-temperature strong {
  color: rgb(33, 33, 33);
  font-size: 64px;
  line-height: 1;
  font-weight: 400;
}

.weather-temperature .units {
  position: relative;
  font-size: 16px;
  top: -34px;
}



.weather-temperature .active:hover {
  text-decoration: none;
}

.weather-forecast {
    margin-top: 20px;
    text-align: center;
    color: #000;

}

.weather-forecast-date {
    font-size: 16px;
    opacity: 0.5;
}

.weather-forecast-temperatures {
    font-size: 13px;
}

.weather-forecast-temperature-min{
    opacity: 0.5;
}

